--- a/views/results.erb
+++ b/views/results.erb
@@ -1,9 +1,13 @@
 <h1>Your Text Analysis</h1>
+<% text = TextAnalyzer.new(params[:user_text]) %>
 
-<h2>Number of Words: </h2>
+<h2>Number of Words: <%= text.count_of_words %> </h2>
 
-<h2>Vowels: </h2>
+<h2>Vowels: <%= text.count_of_vowels %> </h2>
 
-<h2>Consonants: </h2>
+<h2>Consonants: <%= text.count_of_consonants %> </h2>
 
-<h2>Most Common Letter: _____ used _____ times</h2>
+<% letter = text.most_used_letter.keys.first %>
+<% times = text.most_used_letter.values.first %>
+
+<h2>Most Common Letter: <%= letter.upcase %>, used <%= times.to_s %> times</h2>
