commit tree 8fdd2291380a93094b663b3e56e887db3c655b72

--- a/views/results.erb
+++ b/views/results.erb
@@ -10,4 +10,4 @@
 <% letter = text.most_used_letter.keys.first %>
 <% times = text.most_used_letter.values.first %>
 
-<h2>Most Common Letter: <%= letter.upcase %>, used <%= times.to_s %> times</h2>
+<h2>Most Common Letter: <%= letter.upcase %>, used <%= times %> times</h2>
